# 4242fall2021

./: .flaskenv  LICENSE  README.md  app.json  package.json  pyproject.toml  wsgi.py
client/: package.json
client/src/: App.css  App.tsx
client/src/components/: homepage.css  homepage.tsx
client/src/components/graphs/: graphs.css  graphs.tsx
client/src/components/navbar/: navbar.css  navbar.tsx
client/src/components/prediction/: predict.ts  prediction-form.tsx  prediction-results.tsx
server/: app.py  bkapp.py  config.yaml  predict.py  vaers_jan_nov_2021.csv  wsproxy.py
server/model/: encoder.sav  model.sav
server/templates/: .gitignore  embed.html
