[tool.poetry]
name = "4242fall2021"
version = "0.1.0"
description = ""
authors = ["Govani, Aadarsh K <agovani3@gatech.edu>"]

[tool.poetry.dependencies]
python = "^3.9.7"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
