[tool.poetry]
name = "4242fall2021"
version = "0.1.0"
description = ""
authors = ["Govani, Aadarsh K <agovani3@gatech.edu>"]

[tool.poetry.dependencies]
python = "^3.9.7"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
Flask-Cors = "^3.0.10"
pandas = "^1.3.4"
requests = "^2.26.0"
bokeh = "^2.4.2"
scikit-learn = "^1.0.1"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
